[package]
authors                                 = ["Mikhail Solovev <icee@icee.ru>"]
build                                   = "build.rs"
categories                              = ["external-ffi-bindings"]
description                             = "Low-level bindings for the Bitwuzla SMT solver"
documentation                           = "https://docs.rs/bitwuzla-sys"
edition                                 = "2018"
homepage                                = "https://github.com/fatemender/bitwuzla-sys"
keywords                                = ["ffi", "smt"]
license                                 = "MIT"
links                                   = "bitwuzla"
name                                    = "bitwuzla-sys"
readme                                  = "README.md"
repository                              = "https://github.com/fatemender/bitwuzla-sys"
version                                 = "0.6.0"

[features]
default = ["vendor-cadical"]
vendor-cadical = [] # no-op (default)

[dependencies]
libc                                    = "0.2.73"
gmp-mpfr-sys = { version = "*", features = ["force-cross"] }

[build-dependencies]
copy_dir                                = { version = "0.1.2" }
